ZGC options changed